# cmake_minimum_required(VERSION <specify CMake version here>)
cmake_minimum_required(VERSION 3.5)
project(spring22 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(spring22
        asm.h
        bio.c
        bootmain.c
        buf.h
        cat.c
        console.c
        date.h
        defs.h
        echo.c
        elf.h
        exec.c
        fcntl.h
        file.c
        file.h
        forktest.c
        fs.c
        fs.h
        gdbutil
        grep.c
        ide.c
        init.c
        ioapic.c
        kalloc.c
        kbd.c
        kbd.h
        kill.c
        kernel.ld
        lapic.c
        LICENSE
        ln.c
        log.c
        ls.c
        main.c
        Makefile
        memide.c
        memlayout.h
        mkdir.c
        mkfs.c
        mmu.h
        mp.c
        mp.h
        Notes
        param.h
        picirq.c
        pipe.c
        pr.pl
        printf.c
        proc.c
        proc.h
        README
        rm.c
        runoff
        runoff.list
        runoff.spec
        runoff1
        sh.c
        show1
        sign.pl
        sleep1.p
        sleeplock.c
        sleeplock.h
        spinlock.c
        spinlock.h
        spinp
        stat.h
        stressfs.c
        string.c
        swtch.S
        syscall.c
        syscall.h
        sysfile.c
        sysproc.c
        toc.ftr
        toc.hdr
        trap.c
        trapasm.S
        traps.h
        TRICKS
        types.h
        uart.c
        ulib.c
        umalloc.c
        user.h
        usertests.c
        usys.S
        vectors.pl
        vm.c
        wc.c
        x86.h
        zombie.c
        lab1_test.c)
